fix atf card on mobile

--- a/src/sass/4-component/_atf.scss
+++ b/src/sass/4-component/_atf.scss
@@ -44,7 +44,8 @@
   width: 100%;
 
   @include bp(xs) {
-    width: min(100%, 360px);
+    width: 340px;
+    // width: min(100%, 360px);
   }
 
   @include bp(sm) {
@@ -110,7 +111,7 @@
     rotateY(20deg)
     rotateX(15deg)
     rotateZ(-10deg)
-    translateX(10px)
+    translateX(5px)
     translateY(-10%);
 
   @include bp(sm) {
