--- a/src/sass/4-component/_card.scss
+++ b/src/sass/4-component/_card.scss
@@ -29,6 +29,11 @@
 
   & > .full-w-fill {
     padding: var(--_space);
+    margin: 0 var(--_neg-space);
+  }
+
+  & > .full-w-fill-noYMargin {
+    padding: var(--_space);
     margin: var(--_neg-space);
   }
 
